[package]
name = "message-relay"
version = "0.1.4"
edition = "2024"
build = "src/build.rs"

[[bin]]
name = "message-relay"
path = "src/main.rs"

[dependencies]
config = { version = "0.15.11", features = ["toml"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
uuid = { version = "1.17.0", features = ["v7", "serde"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
eyre = { version = "0.6.12" }
async-nats = { version = "0.42.0" }
async-trait = { version = "0.1.88" }
bytes = { version = "1.10.1" }
mongodb = { version = "3.2.3" }
futures-util = { version = "0.3.31" }
serde_with = { version = "3.14.0", features = ["base64"] }
base64 = { version = "0.22.1"}
prost = { version = "0.14.1" }
prost-types = { version = "0.14.1" }

[build-dependencies]
prost-build = "0.14.1"
